# Ecommerce

./: README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
dashboard/fixtures/: db_admin_fixture.json
dashboard/tests/: test_selenium_dashboard.py
ecommerce/: settings.py
ecommerce/tests/: fixtures.py  selenium.py
