[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["dedoxd2 <dedo.xd33@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
pytest = "^8.2.1"
pytest-django = "^4.8.0"
python-decouple = "^3.8"
pytest-selenium = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
